tests/base/invalid/ListAppend_Invalid_2.whiley
import * from whiley.lang.*

[string] f([string] args):
    return r

void ::main(System sys,[string] args):
    l = [1,2,3]
    r = args + l
    f(r)
    sys.out.println(str(r))
